2014-03-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* install.el (install-prefix): Handle new installing method on
	MS-Windows.

2014-02-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* pces-20.el (insert-file-contents-as-raw-text)
	(insert-file-contents-as-raw-text-CRLF): Fix docstring.
	`insert-file-contents-as-binary' is alias for
	`insert-file-contents-literally' on Emacs 20 and XEmacs with
	coding-system..

2014-02-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Fix typo in docstring.
	* pces-20.el (insert-file-contents-as-raw-text)
	(insert-file-contents-as-raw-text-CRLF)

	* pces-e20_2.el (insert-file-contents-as-binary)
	(insert-file-contents-as-raw-text)
	(insert-file-contents-as-raw-text-CRLF)

	* pces-om.el (insert-file-contents-as-binary)

	* pces-raw.el (insert-file-contents-as-binary)

2014-01-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* pym.el (static-if, static-when, static-unless)
	(static-condition-case, static-defconst, static-cond): Fix edebug
	specs.  Suggested by Katsumi Yamaoka.
	Cf. http://thread.gmane.org/gmane.mail.wanderlust.general.japanese/9479

2013-08-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* poe.el: Fix the case that `make-temp-file' is byte compiled with
	lexical-binding.
	Cf. https://github.com/ikazuhiro/apel/pull/3

2013-07-05  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mcs-20.el: Really check whether the mule-vesion variable is defined.

2013-07-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el: Check whether the mule-vesion variable is defined.
	Cf. https://github.com/ikazuhiro/apel/commit/328c02e022340b36dd7e5f9250c7f86d2bafd793

2013-03-24  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-20.el (mime-charset-to-coding-system): Display the message
	and use charset name as coding system when
	`mime-charset-coding-system-alist' indicates invalid coding
	system.

2012-09-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mcs-e20.el (coding-system-to-mime-charset): Coding system's
	setting is preferred to mime-charset-coding-system-alist's value.