@@ -1,3 +1,7 @@
+2014-03-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* install.el (install-prefix): Minor refactoring.
+
 2014-03-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* install.el (install-prefix): Handle new installing method on
